# EntretienAI

./: DESIGN_MODERNE_README.md  LOGIN_MODERNIZE_GUIDE.md  NAVBAR_FIX_GUIDE.md  README.md  interview_report.md  pyproject.toml  test_report_fix.py
frontendAng/: README.md
frontendAng/testai-frontend/: README.md  angular.json  package-lock.json  package.json
frontendAng/testai-frontend/src/: favicon.ico.txt  index.html  manifest.json  styles.scss
frontendAng/testai-frontend/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
frontendAng/testai-frontend/src/app/components/admin-panel/: admin-panel.html  admin-panel.scss  admin-panel.ts
frontendAng/testai-frontend/src/app/components/interview/: interview.html  interview.scss  interview.ts
frontendAng/testai-frontend/src/app/components/login/: login.html  login.scss  login.ts
frontendAng/testai-frontend/src/app/config/: auth.config.ts
frontendAng/testai-frontend/src/app/guards/: auth.guard.ts
frontendAng/testai-frontend/src/app/services/: admin.service.ts  auth.service.ts  document.service.ts  interview.service.ts  interview.ts  pdf-report.service.ts
knowledge/: Cours-de-comptabilite-analytique-converti.txt  rapport_python senior_2025-09-01.txt
runtime/: admin_config.json  web_interview.json
src/testai/: crew.py  main.py
src/testai/config/: agents.yaml  tasks.yaml
src/testai/tools/: __init__.py  ask_candidate_tool.py  rag_index.py  rag_tool.py  sim_candidate_tool.py  web_ask_tool.py
src/testai/web/: backend.py  broker.py
src/testai/webui/: server.py
(+1 files in other folders)
