[project]
name = "testai"
version = "0.1.0"
description = "TestAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
testai = "testai.main:run"
run_crew = "testai.main:run"
train = "testai.main:train"
replay = "testai.main:replay"
test = "testai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
